# marvin

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  LICENSE  Makefile  README.md  cliff.toml  docker-compose.yml  install.sh  plan.md  prd.json.example  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/hooks/: _lib.sh  compact-reinject.sh  mcp-error-monitor.sh  notification-log.sh  post-tool-failure-log.sh  post-tool-use-log.sh  post-tool-use-mcp-monitor.sh  pre-compact-save.sh  pre-tool-use-block-claude-config.sh  pre-tool-use-block-partial-read.sh  pre-tool-use-block-secrets.sh  pre-tool-use-spec-freeze.sh  session-context.sh  session-end-log.sh  session-end.sh  session-persist.sh  session-start-context.sh  session-start-log.sh  session-start-memory.sh  session-start-reinject.sh  session-start-summarize.sh  stop-persist.sh  subagent-quality-gate.sh  subagent-start-log.sh  subagent-stop-gate.sh  subagent-stop-log.sh  tool-failure.sh  tool-usage-log.sh  user-prompt-log.sh
.claude/memory/: MEMORY.md  knowledge-map.md
.claude/rules/: agents.md  delegation.md  handoff.md  hooks.md  ids.md  memory.md  (+4 more)
.devcontainer/: Dockerfile  devcontainer.json
cli/: dashboard.py  marvin.py
core/: CLAUDE.md  memory.md  settings.json
docs/: README.md  agents.md  concepts.md  development-standard.md  development.md  hooks.md  skills.md
global/: CLAUDE.md  marvin-greeting.sh  memory.md  settings.json
research/: agent-routing-delegation-techniques.md  marvin-improvements.md
scripts/: install.py  install.sh  ralph.py  ralph.sh  setup_kb.py
spec/: template.md
(+231 files in other folders)
