[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marvin-cli"
version = "0.5.0"
description = "Data Engineering & AI Assistant — Claude Code orchestration layer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7",
    "click>=8.0",
]

[project.scripts]
marvin = "cli.marvin:main"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.hatch.build.targets.wheel.force-include]
".claude" = "cli/_data/.claude"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyyaml>=6.0",
]
