[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marvin-cli"
version = "0.17.0"
description = "Data Engineering & AI Assistant — Claude Code orchestration layer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7",
    "click>=8.0",
    "rich>=13.0",
    "textual>=1.0.0",
]

[project.scripts]
marvin = "cli.marvin:main"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.hatch.build.targets.wheel.force-include]
".claude" = "cli/_data/.claude"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyyaml>=6.0",
]
